<resources>
    <string name="app_name">Android Post Frontend</string>
    <string name="title_add">Add Package</string>
    <string name="title_relocate">Relocate Package</string>
    <string name="title_deliver">Deliver Package</string>

    <string name="headline_title_sender">Sender</string>
    <string name="headline_title_receiver">Receiver</string>
    <string name="headline_title_packet">Packet</string>

    <string name="edittext_name">Name</string>
    <string name="edittext_address">Address</string>
    <string name="edittext_zip">Zip-Code</string>
    <string name="edittext_city">City</string>

    <string name="packet_size_small">Small</string>
    <string name="packet_size_normal">Normal</string>
    <string name="packet_size_big">Big</string>
    <string name="edittext_packet_weight">Weight</string>
    <string name="edittext_packet_id">Packet ID</string>
    <string name="edit_text_packet_station">Packet Station</string>

    <!-- fontawesome icons -->
    <string name="toggle_car">&#xf1b9;\nCar</string>
    <string name="toggle_plane">&#xf072;\nPlane</string>
    <string name="toggle_center">&#xf015;\nCenter</string>
    <string name="toggle_rocket">&#xf135;\nRocket</string>
    <string name="toggle_foot">&#xf183;\nFoot</string>
    <string name="toggle_ship">&#xf21a;\nShip</string>
    <string name="toggle_truck">&#xf0d1;\nTruck</string>
    <string name="toggle_train">&#xf238;\nTrain</string>
    <string name="toggle_failed">&#xf071;\nFailed</string>
    <string name="icon_barcode">&#xf02a;</string>

    <string name="car">car</string>
    <string name="plane">plane</string>
    <string name="center">center</string>
    <string name="rocket">rocket</string>
    <string name="foot">foot</string>
    <string name="ship">ship</string>
    <string name="truck">truck</string>
    <string name="train">train</string>
    <string name="failed">failed</string>

    <!-- Data fields -->
    <string name="data_sender_name">sender_name</string>
    <string name="data_sender_street">sender_street</string>
    <string name="data_sender_zip">sender_zip</string>
    <string name="data_sender_city">sender_city</string>
    <string name="data_receiver_name">receiver_name</string>
    <string name="data_receiver_street">receiver_street</string>
    <string name="data_receiver_zip">receiver_zip</string>
    <string name="data_receiver_city">receiver_city</string>
    <string name="data_size">size</string>
    <string name="data_weight">weight</string>
    <string name="data_packet_id">packet_id</string>
    <string name="data_station">station</string>

    <string name="invalid_value">Invalid value!</string>

</resources>
