<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.itestra.codingcamp.androidpost.activitys.AddActivity">

    <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_horizontal_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/headline_sender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/headline_title_sender"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <EditText
                    android:id="@+id/edittext_sender_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edittext_name"
                    android:inputType="textPersonName" />

                <EditText
                    android:id="@+id/edittext_sender_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edittext_address"
                    android:inputType="textPostalAddress" />

                <EditText
                    android:id="@+id/edittext_sender_zip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edittext_zip"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/edittext_sender_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/edittext_city"
                    android:inputType="textPersonName" />

            </LinearLayout>

                <include layout="@layout/vertical_line_separator" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/headline_receiver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/headline_title_receiver"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <EditText
                    android:id="@+id/edittext_receiver_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/edittext_name" />

                <EditText
                    android:id="@+id/edittext_receiver_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    android:hint="@string/edittext_address" />

                <EditText
                    android:id="@+id/edittext_receiver_zip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="number"
                    android:hint="@string/edittext_zip"/>

                <EditText
                    android:id="@+id/edittext_receiver_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="@string/edittext_city" />
            </LinearLayout>
                <include layout="@layout/vertical_line_separator" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/headline_packet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/headline_title_packet"
                    android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <ToggleButton
                        android:id="@+id/toggle_size_small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textOff="@string/packet_size_small"
                        android:textOn="@string/packet_size_small"
                        tools:text="test" />

                    <ToggleButton
                        android:id="@+id/toggle_size_normal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:checked="true"
                        android:textOff="@string/packet_size_normal"
                        android:textOn="@string/packet_size_normal" />

                    <ToggleButton
                        android:id="@+id/toggle_size_big"
                        style="@string/packet_size_big"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/packet_size_big"
                        android:textOff="@string/packet_size_big"
                        android:textOn="@string/packet_size_big" />

                </LinearLayout>

                <EditText
                    android:id="@+id/edittext_packet_weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="numberDecimal"
                    android:hint="@string/edittext_packet_weight"/>

            </LinearLayout>

            </LinearLayout>
        </ScrollView>

        <include layout="@layout/floating_action_button_send" />
    </FrameLayout>

    <include
        layout="@layout/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom" />
</LinearLayout>
